--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@use-gesture/react": "^10.3.1",
+    "firebase": "^12.6.0",
     "next": "15.5.5",
     "react": "19.1.0",
     "react-dom": "19.1.0"
